Added div text to display text onto HTML

--- a/index.html
+++ b/index.html
@@ -96,29 +96,25 @@
     <div class="horizontal-line">
     </div>
     <br/>
-
-    <div id="theStartControls">
-      <button id="aboutGame">About the Game (*Start Here* Open the Console)</button>
-      <button id="resetButton">Reset Game</button>
-      <button id="shuffleButton">Shuffle the Deck</button>
-      <button id="dealButton" disabled>Deal a Hand</button>
-    </div>
-    <br>
-    <div id="theGameControls"></div>
-      <button id="card1Button" disabled>
-        Card1</button>
-      <button id="card2Button" disabled>
-        Card 2
-      </button>
-      <button id="card3Button" disabled>
-        Card 3
-      </button>
-      <button id="noTradeButton" disabled>
-        No Trade
-      </button>
-    
-
   </div>
+
+  <div id="theStartControls">
+    <button id="aboutGame">About the Game (*Start Here* Open the Console)</button>
+    <button id="resetButton">Reset Game</button>
+    <button id="shuffleButton">Shuffle the Deck</button>
+    <button id="dealButton" disabled>Deal a Hand</button>
+  </div>
+  
+  <br>
+
+  <div id="theGameControls">
+    <button id="card1Button" disabled>Card1</button>
+    <button id="card2Button" disabled>Card 2</button>
+    <button id="card3Button" disabled>Card 3</button>
+    <button id="noTradeButton" disabled>No Trade</button>
+  </div>
+
+  <div id="text"></div>
 
   <script src="main.js">
   </script>
